--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de Linktree Personalizado</title>
+    <title>Gerador link</title>
     <style>
         body {
             font-family: sans-serif;
@@ -300,5 +300,6 @@
 
     <script src="generator.js"></script>
 </body>
+
 
 </html>
