--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
 <body>
 
-    <h1>Gerador de Link (Linktree Style)</h1>
+    <h1>Gerador de Link Automático</h1>
 
     <div class="container">
 
@@ -303,3 +303,4 @@
 
 
 </html>
+
