--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de Linktree Personalizado</title>
+    <title>Gerador de Link </title>
     <style>
         body {
             font-family: sans-serif;
@@ -229,7 +229,7 @@
 
 <body>
 
-    <h1>Gerador de Link (Linktree Style)</h1>
+    <h1>Gerador de Link Automático1</h1>
 
     <div class="container">
 
