--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <input type="text" id="title" placeholder="Ex: Meu Produto Top / GRUPO DE PROMOÇÕES">
 
                 <label for="target">URL de Destino (Ignorado se for Pasta):</label>
-                <input type="text" id="target" placeholder="Ex: https://meusite.com/produto">
+                <input type="text" id="target" placeholder="Ex: https://meusite.com/produto1">
 
                 <label for="description">Descrição (opcional):</label>
                 <input type="text" id="description" placeholder="Ex: Oferta válida por tempo limitado!">
