--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de Link </title>
+    <title>Gerador de Link</title>
     <style>
         body {
             font-family: sans-serif;
@@ -94,7 +94,7 @@
         }
 
         .preview-link-item {
-            background-color: #e0e0e0;
+            background-color: #1b97f5;
         }
 
         .preview-link-item:hover {
@@ -102,7 +102,7 @@
         }
 
         .preview-folder-title {
-            background-color: #1b97f5;
+            background-color: #6c757d;
             color: white;
             justify-content: space-between;
             cursor: pointer;
@@ -237,10 +237,10 @@
             <h2>1. Dados do Grupo/Link Principal</h2>
             <form id="main-link-form">
                 <label for="title">Título Principal (Link ou Grupo):</label>
-                <input type="text" id="title" placeholder="Ex: Meu Produto Top / GRUPO DE PROMOÇÕES">
+                <input type="text" id="title" required placeholder="Ex: Meu Produto Top / GRUPO DE PROMOÇÕES">
 
                 <label for="target">URL de Destino (Ignorado se for Pasta):</label>
-                <input type="text" id="target" placeholder="Ex: https://meusite.com/produto1">
+                <input type="text" id="target" placeholder="Ex: https://meusite.com/produto">
 
                 <label for="description">Descrição (opcional):</label>
                 <input type="text" id="description" placeholder="Ex: Oferta válida por tempo limitado!">
