--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de Link</title>
+    <title>Gerador de Linktree Personalizado</title>
     <style>
         body {
             font-family: sans-serif;
@@ -94,7 +94,7 @@
         }
 
         .preview-link-item {
-            background-color: #1b97f5;
+            background-color: #e0e0e0;
         }
 
         .preview-link-item:hover {
@@ -102,13 +102,14 @@
         }
 
         .preview-folder-title {
-            background-color: #6c757d;
+            background-color: #1b97f5;
             color: white;
             justify-content: space-between;
             cursor: pointer;
         }
 
         .preview-folder-title:hover {
+
             background-color: #5a6268;
         }
 
@@ -229,7 +230,7 @@
 
 <body>
 
-    <h1>Gerador de Link Automático</h1>
+    <h1>Gerador de Link (Linktree Style)</h1>
 
     <div class="container">
 
